@@ -16,6 +16,7 @@
         "(?) alien-biomes-hr-terrain",
         "AsphaltPaving >= 1.3.1",
         "Asteroid_Mining >= 0.9.15",
+        "BatteryElectricTrain >= 1.1.7",
         "beautiful_bridge_railway_Cargoships >= 1.3.5",
         "better-victory-screen >= 0.3.1",
         "capacity-combinator >= 2.4.0",
