@@ -49,6 +49,7 @@ Date: 9999-99-99
       - Additional, faster car tiers (via "Faster Cars")
       - Aeral travel (via "HelicopterRevival" and "Lex's Aircraft")
       - Miniature trains (via "Mini Trains")
+      - Battery-powered electric trains (via Battery-Electric Train)
     - Visuals
       - Realistic nuclear reactor glow (via "Realistic Reactor Glow")
       - Improved heat pipe glow (via "Realistic Heat Glow")
